resources/css/navigation.css
/*-- NAVIGATION --*/

.espcentrum-header {
  position: sticky;
  top: 0;
  z-index: 100;
  transition: all .3s ease;

  &.espcentrum-sticky, &.always-sticky {
    @apply shadow-md lg:-translate-y-[44px];

    & .sub-menu {
      background: white;
    }
  }

  @screen lg {
    #primary-menu {
      > ul > li {
        & > a {
          position: relative;

          &:after {
            content: '';
            width: 100%;
            height: 0.125rem;

            position: absolute;
            right: 0;
            bottom: -0.3125rem;

            background-color: #D97307;
            opacity: 0;

            @apply transition-opacity duration-300;
          }

        } 
        &:hover > a:after {
          opacity: 1;
        }

        > .sub-menu-holder {
          @apply absolute left-0 pt-[2.5rem] top-[4rem] w-full opacity-0 transition-all pointer-events-none;

          > .sub-menu-wrap {
            @apply w-full bg-white shadow-md transition-all overflow-hidden h-0 pointer-events-none group-hover:pointer-events-auto duration-500;

            & > .sub-menu {
              @apply container-xl mx-auto grid grid-cols-4 gap-5;

              & > li {
                > a {
                  @apply text-[20px] xl:text-[24px] border-b-2 pb-2 block mb-[1px] font-semibold transition-all pl-0;

                  &:hover {
                    @apply border-b-[3px] mb-0;
                  }

                }

                &:only-child {
                  @apply col-start-2;

                  > a {
                    @apply border-secondary flex gap-3;
                    &:before {
                      @apply i-praktijk;
                      content: '';
                      background-size: 35px 20px;
                      background-repeat: no-repeat;
                      width: 35px;
                      height: 20px;
                      display: block;
                    }
                  }

                  .sub-menu a:after {
                    @apply bg-secondary;
                  }
                }

                &:nth-child(1):not(:only-child) {
                  > a {
                    @apply border-themepurple flex gap-3;
                    &:before {
                      @apply i-fysiotherapie;
                      flex-shrink: 0;
                      content: '';
                      width: 25px;
                      height: 25px;
                      display: block;
                    }
                  }

                  .sub-menu a:after {
                    @apply bg-themepurple;
                  }
                } 
                &:nth-child(2):not(:only-child) {
                  > a {
                    @apply border-themeblue flex gap-3;
                    &:before {
                      @apply i-osteopathie;
                      flex-shrink: 0;
                      content: '';
                      width: 25px;
                      height: 24px;
                      background-position: 0 2px;
                      display: block;
                    }
                  }

                  .sub-menu a:after {
                    @apply bg-themeblue;
                  }
                } 
                &:nth-child(3):not(:only-child) {
                  > a {
                    @apply border-themered flex gap-3;
                    &:before {
                      @apply i-medischefitness;
                      flex-shrink: 0;
                      content: '';
                      width: 25px;
                      height: 25px;
                      display: block;
                    }
                  }

                  .sub-menu a:after {
                    @apply bg-themered;
                  }
                } 
                &:nth-child(4):not(:only-child) {
                  > a {
                    @apply border-themegreen flex gap-3;
                    &:before {
                      @apply i-leefstijlinterventies;
                      flex-shrink: 0;
                      content: '';
                      width: 25px;
                      height: 25px;
                      display: block;
                    }
                  }

                  .sub-menu a:after {
                    @apply bg-themegreen;
                  }
                } 

                .sub-menu {
                  @apply flex flex-col gap-4 py-4;

                  li {
                    @apply leading-tight;
                  }

                  a {
                    position: relative;
                    
                    &:after {
                      content: '';
                      width: 100%;
                      height: 0.125rem;

                      position: absolute;
                      right: 0;
                      bottom: -0.3125rem;

                      background-color: #D97307;
                      opacity: 0;

                      @apply transition-opacity duration-300;
                    }

                    &:hover:after {
                      opacity: 1;
                    }
                  }

                  .sub-menu {
                    @apply hidden;
                  }
                }
              }
            }

            & > .sub-menu-bg {
              @apply bg-[rgba(0,0,0,0.4)] h-screen w-full absolute top-[2.5rem] -z-10 backdrop-blur-sm pointer-events-none;
            }
          }
        }

        &:hover > .sub-menu-holder {
          @apply opacity-100 pointer-events-auto;

          > .sub-menu-wrap {
            @apply h-fit pointer-events-auto py-10;
          }

          .sub-menu-bg {
            @apply opacity-100;
          }
        }
      }  
    }
  }

  @media (max-width: calc(theme('screens.lg') - 1px)) {
    #primary-menu {
      > ul > li {
        a {
          @apply font-bold text-[25px];
        }
        > .sub-menu-holder {
          @apply hidden;
        }
      }
    }
  }

  & .cta-menu a {
    @apply block text-center lg:text-left font-bold py-[0.5rem] px-4 border-2 border-primary shadow rounded hover:border-primaryHover translate-y-0 transition-all duration-300 hover:-translate-y-0.5 hover:shadow-lg;
  }

  .sub-menu-bg {
    @apply transition duration-500 opacity-0;
  }
}

.sidenav {

  > div > div > a {
    @apply hover:underline underline-offset-[5px] flex gap-3 items-center;
  }

  .sidebarmenu {
    @apply hidden group-open:block lg:block my-6 lg:my-0 space-y-3 lg:space-y-2;

    .menu-item {
      @apply font-medium lg:font-bold text-[20px] underline-offset-[3px];

      & a:hover {
        @apply underline;
      }

      &.current_page_item {

        & > a {
          @apply underline;
        }
      }
    }

    .sub-menu {
      @apply ml-8 my-3;

      .menu-item {
        @apply font-normal text-small;
      }
    }
  }

  &--fysiotherapie {
    > div {
      @apply bg-themepurple/10 lg:bg-transparent;
    }

    > div > div > a {
      @apply border-themepurple;
      &:before {
        @apply i-fysiotherapie;
        content: '';
        background-size: 21px;
        background-repeat: no-repeat;
        width: 21px;
        height: 21px;
        display: block;
      }
    }

    .current_page_item > a {
      @apply text-themepurple;
    }
  }

  &--osteopathie {
    > div {
      @apply bg-themeblue/10 lg:bg-transparent;
    }

    > div > div > a {
      @apply border-themeblue;
      &:before {
        content: '';
        background-size: 21px;
        background-repeat: no-repeat;
        width: 21px;
        height: 21px;
        display: block;

        @apply i-osteopathie;
      }
    }

    .current_page_item > a {
      @apply text-themeblue;
    }
  }

  &--medische-fitness {
    > div {
      @apply bg-themered/10 lg:bg-transparent;
    }

    > div > div > a {
      @apply border-themered;
      &:before {
        @apply i-medischefitness;
        content: '';
        background-size: 21px;
        background-repeat: no-repeat;
        width: 21px;
        height: 21px;
        display: block;
      }
    }

    .current_page_item > a {
      @apply text-themered;
    }
  }

  &--leefstijl-interventies {
    > div {
      @apply bg-themegreen/10 lg:bg-transparent;
    }

    > div > div > a {
      @apply border-themegreen;
      &:before {
        @apply i-leefstijlinterventies;
        content: '';
        background-size: 21px;
        background-repeat: no-repeat;
        width: 21px;
        height: 21px;
        display: block;
      }
    }

    .current_page_item > a {
      @apply text-themegreen;
    }
  }

  &--praktijk {
    > div {
      @apply bg-secondary/10 lg:bg-transparent;
    }

    > div > div > a {
      @apply border-secondary;
      &:before {
        @apply i-praktijk;
        content: '';
        background-size: 35px 20px;
        background-repeat: no-repeat;
        width: 35px;
        height: 20px;
        display: block;
      }
    }

    .current_page_item > a {
      @apply text-secondary;
    }
  }
}

